[package]
name = "bevy_time_derive"
version = "0.14.0-dev"
edition = "2021"
description = "Derive implementations for bevy_time"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[lib]
proc-macro = true

[features]
default = []
# When enabled, allows documentation comments to be processed by the reflection macros
documentation = []

[dependencies]
bevy_macro_utils = { path = "../../bevy_macro_utils", version = "0.14.0-dev" }

syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true
